# opensslqt5

./: CMakeLists.txt  license.txt  readme.md
scripts/: generatesource.py  generatesymbols.py  symbols_crypto.txt  symbols_ssl.txt
